// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleModal should render correctly 1`] = `
<RNSScreenStack
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNSScreen
    collapsable={false}
    forwardedRef={[Function]}
    gestureResponseDistance={
      Object {
        "bottom": -1,
        "end": -1,
        "start": -1,
        "top": -1,
      }
    }
    nativeBackButtonDismissalEnabled={false}
    onAppear={[Function]}
    onDisappear={[Function]}
    onDismissed={[Function]}
    onHeaderBackButtonClicked={[Function]}
    onTransitionProgress={[Function]}
    onWillAppear={[Function]}
    onWillDisappear={[Function]}
    replaceAnimation="pop"
    stackPresentation="push"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    swipeDirection="horizontal"
  >
    <RNSScreenStackHeaderConfig
      backgroundColor="rgb(255, 255, 255)"
      color="rgb(0, 122, 255)"
      hidden={false}
      onAttached={[Function]}
      onDetached={[Function]}
      title="MockedScreen"
      titleColor="rgb(28, 28, 30)"
      topInsetEnabled={true}
      translucent={false}
    />
    <View
      stackPresentation="push"
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          },
          undefined,
        ]
      }
    >
      <View
        testID="schedule_modal"
      >
        <View
          style={
            Object {
              "height": 24,
              "paddingHorizontal": undefined,
              "paddingVertical": undefined,
              "width": undefined,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#E3E6F2",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 8,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-SemiBold",
                  "fontSize": 17,
                },
                Object {},
                undefined,
              ]
            }
          >
            Article Schedule
          </Text>
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingBottom": 32,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 4,
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID="date_input"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#353E6E",
                      "fontFamily": "BeVietnamPro-Light",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#181C32",
                    },
                    Object {
                      "marginBottom": 8,
                    },
                  ]
                }
              >
                Date
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "#E3E6F2",
                    "borderRadius": 6,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "minHeight": 40,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                    "paddingRight": 12,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#212745",
                        "fontFamily": "BeVietnamPro-Light",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#353E6E",
                      },
                      undefined,
                    ]
                  }
                >
                  DD/MM/YYYY
                </Text>
                <View
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={false}
                  hitSlop={
                    Object {
                      "bottom": 10,
                      "left": 10,
                      "right": 10,
                      "top": 10,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                        undefined,
                        Object {
                          "backgroundColor": undefined,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          undefined,
                          undefined,
                          undefined,
                        ]
                      }
                    >
                      <View />
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "height": undefined,
                  "paddingHorizontal": undefined,
                  "paddingVertical": undefined,
                  "width": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 4,
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID="date_input"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#353E6E",
                      "fontFamily": "BeVietnamPro-Light",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#181C32",
                    },
                    Object {
                      "marginBottom": 8,
                    },
                  ]
                }
              >
                Time
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "#E3E6F2",
                    "borderRadius": 6,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "minHeight": 40,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                    "paddingRight": 12,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#212745",
                        "fontFamily": "BeVietnamPro-Light",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#353E6E",
                      },
                      undefined,
                    ]
                  }
                >
                  HH:MM
                </Text>
                <View
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={false}
                  hitSlop={
                    Object {
                      "bottom": 10,
                      "left": 10,
                      "right": 10,
                      "top": 10,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                        undefined,
                        Object {
                          "backgroundColor": undefined,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          undefined,
                          undefined,
                          undefined,
                        ]
                      }
                    >
                      <View />
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "position": "absolute",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "height": 16,
                "paddingHorizontal": undefined,
                "paddingVertical": undefined,
                "width": undefined,
              }
            }
          />
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "borderRadius": 8,
                },
                undefined,
              ]
            }
            testID="button_wrapper"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 4,
                  },
                  undefined,
                  Object {
                    "backgroundColor": "#F4EFFB",
                    "height": 36,
                    "paddingHorizontal": 12,
                  },
                ]
              }
              testID="button.content"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#212745",
                      "fontFamily": "BeVietnamPro-Medium",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#BAC0DE",
                    },
                    Array [
                      Object {
                        "textAlign": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                testID="button.text"
              >
                Schedule
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNSScreen>
</RNSScreenStack>
`;

exports[`ScheduleModal should show success if schedule success 1`] = `
<RNSScreenStack
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNSScreen
    collapsable={false}
    forwardedRef={[Function]}
    gestureResponseDistance={
      Object {
        "bottom": -1,
        "end": -1,
        "start": -1,
        "top": -1,
      }
    }
    nativeBackButtonDismissalEnabled={false}
    onAppear={[Function]}
    onDisappear={[Function]}
    onDismissed={[Function]}
    onHeaderBackButtonClicked={[Function]}
    onTransitionProgress={[Function]}
    onWillAppear={[Function]}
    onWillDisappear={[Function]}
    replaceAnimation="pop"
    stackPresentation="push"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    swipeDirection="horizontal"
  >
    <RNSScreenStackHeaderConfig
      backgroundColor="rgb(255, 255, 255)"
      color="rgb(0, 122, 255)"
      hidden={false}
      onAttached={[Function]}
      onDetached={[Function]}
      title="MockedScreen"
      titleColor="rgb(28, 28, 30)"
      topInsetEnabled={true}
      translucent={false}
    />
    <View
      stackPresentation="push"
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          },
          undefined,
        ]
      }
    >
      <View
        testID="schedule_modal"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomColor": "#E3E6F2",
              "borderBottomWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 12,
              "paddingHorizontal": 16,
              "paddingTop": 8,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#181C32",
                  "fontFamily": "BeVietnamPro-SemiBold",
                  "fontSize": 17,
                },
                Object {},
                undefined,
              ]
            }
          >
            Article Schedule
          </Text>
          <View
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View />
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "paddingBottom": 32,
              "paddingHorizontal": 16,
              "paddingTop": 16,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 4,
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID="date_input"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#353E6E",
                      "fontFamily": "BeVietnamPro-Light",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#181C32",
                    },
                    Object {
                      "marginBottom": 8,
                    },
                  ]
                }
              >
                Date
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "#E3E6F2",
                    "borderRadius": 6,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "minHeight": 40,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                    "paddingRight": 12,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#212745",
                        "fontFamily": "BeVietnamPro-Light",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#353E6E",
                      },
                      undefined,
                    ]
                  }
                >
                  DD/MM/YYYY
                </Text>
                <View
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={false}
                  hitSlop={
                    Object {
                      "bottom": 10,
                      "left": 10,
                      "right": 10,
                      "top": 10,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                        undefined,
                        Object {
                          "backgroundColor": undefined,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          undefined,
                          undefined,
                          undefined,
                        ]
                      }
                    >
                      <View />
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "position": "absolute",
                  }
                }
              />
            </View>
            <View
              style={
                Object {
                  "height": undefined,
                  "paddingHorizontal": undefined,
                  "paddingVertical": undefined,
                  "width": 16,
                }
              }
            />
            <View
              style={
                Array [
                  Object {
                    "marginVertical": 4,
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
              testID="date_input"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#353E6E",
                      "fontFamily": "BeVietnamPro-Light",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#181C32",
                    },
                    Object {
                      "marginBottom": 8,
                    },
                  ]
                }
              >
                Time
              </Text>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "#E3E6F2",
                    "borderRadius": 6,
                    "borderWidth": 1,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "minHeight": 40,
                    "opacity": 1,
                    "paddingHorizontal": 16,
                    "paddingRight": 12,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#212745",
                        "fontFamily": "BeVietnamPro-Light",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#353E6E",
                      },
                      undefined,
                    ]
                  }
                >
                  HH:MM
                </Text>
                <View
                  accessibilityState={
                    Object {
                      "disabled": true,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={false}
                  hitSlop={
                    Object {
                      "bottom": 10,
                      "left": 10,
                      "right": 10,
                      "top": 10,
                    }
                  }
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                        undefined,
                        Object {
                          "backgroundColor": undefined,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          undefined,
                          undefined,
                          undefined,
                        ]
                      }
                    >
                      <View />
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "position": "absolute",
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "height": 16,
                "paddingHorizontal": undefined,
                "paddingVertical": undefined,
                "width": undefined,
              }
            }
          />
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "borderRadius": 8,
                },
                undefined,
              ]
            }
            testID="button_wrapper"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 4,
                  },
                  undefined,
                  Object {
                    "backgroundColor": "#F4EFFB",
                    "height": 36,
                    "paddingHorizontal": 12,
                  },
                ]
              }
              testID="button.content"
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#212745",
                      "fontFamily": "BeVietnamPro-Medium",
                      "fontSize": 15,
                    },
                    Object {
                      "color": "#BAC0DE",
                    },
                    Array [
                      Object {
                        "textAlign": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                testID="button.text"
              >
                Schedule
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#FFFFFF",
                "borderTopLeftRadius": 16,
                "borderTopRightRadius": 16,
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
        >
          <Modal
            hardwareAccelerated={false}
            transparent={true}
            visible={true}
          />
          <View
            style={
              Array [
                Object {
                  "flex": 1,
                },
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              accessibilityState={
                Object {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              hitSlop={
                Object {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    undefined,
                    Object {
                      "backgroundColor": undefined,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      undefined,
                      undefined,
                      undefined,
                    ]
                  }
                >
                  <View />
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "height": 16,
                  "paddingHorizontal": undefined,
                  "paddingVertical": undefined,
                  "width": undefined,
                }
              }
            />
            <Text
              style={
                Array [
                  Object {
                    "color": "#181C32",
                    "fontFamily": "BeVietnamPro-Light",
                    "fontSize": 17,
                  },
                  Object {
                    "color": "#181C32",
                  },
                  undefined,
                ]
              }
            >
              Successful Schedule
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RNSScreen>
</RNSScreenStack>
`;
